--- a/docs-build/src/components/HeadCommon.astro
+++ b/docs-build/src/components/HeadCommon.astro
@@ -1,16 +1,18 @@
 ---
 import '../styles/theme.css';
 import '../styles/index.css';
+
+const baseUrl = import.meta.env.BASE_URL
 ---
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="alternate icon" type="image/x-icon" href="/favicon.ico" />
+<link rel="icon" type="image/svg+xml" href={`${baseUrl}favicon.svg`} />
+<link rel="alternate icon" type="image/x-icon" href={`${baseUrl}favicon.ico`} />
 
-<link rel="sitemap" href="/sitemap.xml" />
+<link rel="sitemap" href={`${baseUrl}sitemap.xml`} />
 
 <!-- Preload Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,7 +20,7 @@ import '../styles/index.css';
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@0;1&display=swap" rel="stylesheet" />
 
 <!-- Scrollable a11y code helper -->
-<script src="/make-scrollable-code-focusable.js" is:inline></script>
+<script src={`${baseUrl}make-scrollable-code-focusable.js`} is:inline></script>
 
 <!-- This is intentionally inlined to avoid FOUC -->
 <script is:inline>
