--- a/docs-build/src/components/Header/Header.astro
+++ b/docs-build/src/components/Header/Header.astro
@@ -7,6 +7,7 @@ import SidebarToggle from './SidebarToggle.tsx';
 import LanguageSelect from './LanguageSelect.tsx';
 import Search from './Search.tsx';
 
+const baseUrl = import.meta.env.BASE_URL
 const { currentPage } = Astro.props;
 const lang = currentPage && getLanguageFromURL(currentPage);
 ---
@@ -18,7 +19,7 @@ const lang = currentPage && getLanguageFromURL(currentPage);
 			<SidebarToggle client:idle />
 		</div>
 		<div class="logo flex">
-			<a href="/">
+			<a href={`${baseUrl}`}>
 				<AstroLogo size={40} />
 				<h1>{CONFIG.SITE.title ?? "Documentation"}</h1>
 			</a>
