--- a/docs-build/src/components/LeftSidebar/LeftSidebar.astro
+++ b/docs-build/src/components/LeftSidebar/LeftSidebar.astro
@@ -1,6 +1,7 @@
 ---
 import { getLanguageFromURL } from '../../languages.ts';
 import { SIDEBAR } from '../../config.ts';
+const baseUrl = import.meta.env.BASE_URL
 const { currentPage } = Astro.props;
 const currentPageMatch = currentPage.slice(1);
 const langCode = getLanguageFromURL(currentPage);
@@ -29,7 +30,7 @@ const sidebarSections = SIDEBAR[langCode].reduce((col, item, i) => {
 				<div class="nav-group">
 					<h2 class="nav-group-title">
 						{section.link
-							? <a href={`${Astro.site.pathname}${section.link}`} aria-current={`${currentPageMatch === section.link ? 'page' : 'false'}`} >
+							? <a href={`${baseUrl}${section.link}`} aria-current={`${currentPageMatch === section.link ? 'page' : 'false'}`} >
 								{section.text}
 							</a>
 							: section.text
@@ -38,7 +39,7 @@ const sidebarSections = SIDEBAR[langCode].reduce((col, item, i) => {
 					<ul>
 						{section.children.map((child) => (
 							<li class="nav-link">
-								<a href={`${Astro.site.pathname}${child.link}`} aria-current={`${currentPageMatch === child.link ? 'page' : 'false'}`}>
+								<a href={`${baseUrl}${child.link}`} aria-current={`${currentPageMatch === child.link ? 'page' : 'false'}`}>
 									{child.text}
 								</a>
 							</li>
