--- a/docs-build/src/components/PageContent/PageContent.astro
+++ b/docs-build/src/components/PageContent/PageContent.astro
@@ -1,6 +1,6 @@
 ---
 import MoreMenu from '../RightSidebar/MoreMenu.astro';
-import TableOfContents from '../RightSidebar/TableOfContents.tsx';
+import TableOfContents from '../RightSidebar/TableOfContents.svelte';
 
 const { content, githubEditUrl, hiddenRight } = Astro.props;
 const title = content.title;
