--- a/docs-build/src/components/LeftSidebar/LeftSidebar.astro
+++ b/docs-build/src/components/LeftSidebar/LeftSidebar.astro
@@ -1,12 +1,10 @@
 ---
-import { getLanguageFromURL } from '../../languages.ts';
 import { SIDEBAR } from '../../config.ts';
 const baseUrl = import.meta.env.BASE_URL
 const { currentPage } = Astro.props;
 const currentPageMatch = currentPage.slice(1);
-const langCode = getLanguageFromURL(currentPage);
 // SIDEBAR is a flat array. Group it by sections to properly render.
-const sidebarSections = SIDEBAR[langCode].reduce((col, item, i) => {
+const sidebarSections = SIDEBAR.en.reduce((col, item, i) => {
 	// If the first item is not a section header, create a new container section.
 	if (i === 0) {
 		if (!item.header) {
