--- a/docs-build/src/components/ESLintPlaygroundWrap.astro
+++ b/docs-build/src/components/ESLintPlaygroundWrap.astro
@@ -1,4 +1,4 @@
 ---
 import ESLintPlayground from './ESLintPlayground.svelte'
 ---
-<ESLintPlayground  client:only />
+<ESLintPlayground client:only="svelte" />
