--- a/docs-build/src/components/RightSidebar/RightSidebar.astro
+++ b/docs-build/src/components/RightSidebar/RightSidebar.astro
@@ -1,13 +1,13 @@
 ---
 import TableOfContents from './TableOfContents.svelte';
 import MoreMenu from './MoreMenu.astro';
-const { content, githubEditUrl } = Astro.props;
+const { content, githubEditUrl, hiddenTOC } = Astro.props;
 const headers = content.astro.headers;
 ---
 
 <nav class="sidebar-nav" aria-labelledby="grid-right">
 	<div class="sidebar-nav-inner">
-		<TableOfContents client:media="(min-width: 50em)" {headers} />
+		{!hiddenTOC && <TableOfContents client:media="(min-width: 50em)" {headers} />}
 		<MoreMenu editHref={githubEditUrl} />
 	</div>
 </nav>
