--- a/docs-build/src/layouts/MainLayout.astro
+++ b/docs-build/src/layouts/MainLayout.astro
@@ -7,7 +7,9 @@ import LeftSidebar from '../components/LeftSidebar/LeftSidebar.astro';
 import RightSidebar from '../components/RightSidebar/RightSidebar.astro';
 import * as CONFIG from '../config';
 
-const { content = {}, hiddenRight } = Astro.props;
+const { content = {} } = Astro.props;
+const hiddenRight = Boolean(content.hiddenRight)
+const hiddenTOC = Boolean(content.hiddenRight)
 const deployCanonicalURL = `https://ota-meshi.github.io${import.meta.env.BASE_URL  }${new URL(Astro.canonicalURL).pathname.replace(/^\//u,'')}`
 const currentPage = new URL(Astro.request.url).pathname;
 const currentFile = `src/pages${currentPage.replace(/\/$/, '')}.md`;
@@ -124,14 +126,14 @@ const githubEditUrl = CONFIG.GITHUB_EDIT_URL && CONFIG.GITHUB_EDIT_URL + current
 				<LeftSidebar {currentPage} />
 			</aside>
 			<div id="grid-main">
-				<PageContent {content} {githubEditUrl} hiddenRight>
+				<PageContent {content} {githubEditUrl} {hiddenRight} {hiddenTOC}>
 					<slot />
 				</PageContent>
 			</div>
 			{
 				!hiddenRight &&
 				<aside id="grid-right" class="grid-sidebar" title="Table of Contents">
-					<RightSidebar {content} {githubEditUrl} />
+					<RightSidebar {content} {githubEditUrl} {hiddenTOC}/>
 				</aside>
 			}
 		</main>
