--- a/docs-build/src/components/HeadCommon.astro
+++ b/docs-build/src/components/HeadCommon.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/theme.css';
 import '../styles/index.css';
+import '../styles/components.css';
 
 const baseUrl = import.meta.env.BASE_URL
 ---
