Update repo lint config

--- a/docs-build/src/components/ESLintCodeBlockWrap.astro
+++ b/docs-build/src/components/ESLintCodeBlockWrap.astro
@@ -1,6 +1,7 @@
 ---
-import ESLintCodeBlock from './ESLintCodeBlock.svelte'
+import ESLintCodeBlock from "./ESLintCodeBlock.svelte"
 ---
-<ESLintCodeBlock client:only="svelte" >
-    <slot></slot>
+
+<ESLintCodeBlock client:only="svelte">
+  <slot></slot>
 </ESLintCodeBlock>
