--- a/docs-build/src/components/ESLintPlaygroundWrap.astro
+++ b/docs-build/src/components/ESLintPlaygroundWrap.astro
@@ -1,4 +1,5 @@
 ---
-import ESLintPlayground from './ESLintPlayground.svelte'
+import ESLintPlayground from "./ESLintPlayground.svelte"
 ---
+
 <ESLintPlayground client:only="svelte" />
