--- a/docs-build/src/components/HeadCommon.astro
+++ b/docs-build/src/components/HeadCommon.astro
@@ -1,13 +1,12 @@
 ---
-import '../styles/theme.css';
-import '../styles/index.css';
-import '../styles/components.css';
+import "../styles/theme.css"
+import "../styles/index.css"
+import "../styles/components.css"
 
 const baseUrl = import.meta.env.BASE_URL
 ---
 
-<!-- Global Metadata -->
-<meta charset="utf-8" />
+<!-- Global Metadata --><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 
 <link rel="icon" type="image/svg+xml" href={`${baseUrl}favicon.svg`} />
@@ -18,20 +17,26 @@ const baseUrl = import.meta.env.BASE_URL
 <!-- Preload Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@0;1&display=swap" rel="stylesheet" />
+<link
+  href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@0;1&display=swap"
+  rel="stylesheet"
+/>
 
 <!-- Scrollable a11y code helper -->
 <script src={`${baseUrl}make-scrollable-code-focusable.js`} is:inline></script>
 
 <!-- This is intentionally inlined to avoid FOUC -->
 <script is:inline>
-	const root = document.documentElement;
-	const theme = localStorage.getItem('theme');
-	if (theme === 'dark' || (!theme && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-		root.classList.add('theme-dark');
-	} else {
-		root.classList.remove('theme-dark');
-	}
+  const root = document.documentElement
+  const theme = localStorage.getItem("theme")
+  if (
+    theme === "dark" ||
+    (!theme && window.matchMedia("(prefers-color-scheme: dark)").matches)
+  ) {
+    root.classList.add("theme-dark")
+  } else {
+    root.classList.remove("theme-dark")
+  }
 </script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
