Update eslint config

--- a/docs-build/src/components/ESLintCodeBlockWrap.astro
+++ b/docs-build/src/components/ESLintCodeBlockWrap.astro
@@ -2,6 +2,6 @@
 import ESLintCodeBlock from "./ESLintCodeBlock.svelte"
 ---
 
-<ESLintCodeBlock client:only="svelte">
+<ESLintCodeBlock client:only="svelte" fix={true} rules={{}}>
   <slot></slot>
 </ESLintCodeBlock>
