--- a/docs-build/src/components/HeadSEO.astro
+++ b/docs-build/src/components/HeadSEO.astro
@@ -10,7 +10,7 @@ const title = content.title || content?.astro?.headers?.[0]?.text
 const formattedContentTitle =
   title && title !== SITE.title ? `${title} 🚀 ${SITE.title}` : SITE.title
 const imageSrc = content?.image?.src ?? OPEN_GRAPH.image.src
-const canonicalImageSrc = new URL(imageSrc, Astro.site)
+const canonicalImageSrc = imageSrc && new URL(imageSrc, Astro.site)
 const imageAlt = content?.image?.alt ?? OPEN_GRAPH.image.alt
 ---
 
@@ -21,8 +21,12 @@ const imageAlt = content?.image?.alt ?? OPEN_GRAPH.image.alt
 <meta property="og:type" content="article" />
 <meta property="og:url" content={canonicalURL} />
 <meta property="og:locale" content={content.ogLocale ?? SITE.defaultLanguage} />
-<meta property="og:image" content={canonicalImageSrc} />
-<meta property="og:image:alt" content={imageAlt} />
+{canonicalImageSrc && (
+  <>
+    <meta property="og:image" content={canonicalImageSrc} />
+    {imageAlt && <meta property="og:image:alt" content={imageAlt} />}
+  </>
+)}
 <meta
   name="description"
   property="og:description"
@@ -38,8 +42,12 @@ const imageAlt = content?.image?.alt ?? OPEN_GRAPH.image.alt
   name="twitter:description"
   content={content.description ? content.description : SITE.description}
 />
-<meta name="twitter:image" content={canonicalImageSrc} />
-<meta name="twitter:image:alt" content={imageAlt} />
+{canonicalImageSrc && (
+  <>
+    <meta name="twitter:image" content={canonicalImageSrc} />
+    {imageAlt && <meta name="twitter:image:alt" content={imageAlt} />}
+  </>
+)}
 
 <!--
   TODO: Add json+ld data, maybe https://schema.org/APIReference makes sense?
