--- a/docs-build/src/components/ESLintCodeBlockWrap.astro
+++ b/docs-build/src/components/ESLintCodeBlockWrap.astro
@@ -1,7 +1,8 @@
 ---
 import ESLintCodeBlock from "./ESLintCodeBlock.svelte"
+const props = Astro.props
 ---
 
-<ESLintCodeBlock client:only="svelte" fix={true} rules={{}}>
+<ESLintCodeBlock client:only="svelte" fix={props.fix || false} rules={{}}>
   <slot></slot>
 </ESLintCodeBlock>
