--- a/docs-build/src/components/PageContent/PageContent.astro
+++ b/docs-build/src/components/PageContent/PageContent.astro
@@ -4,7 +4,7 @@ import TableOfContents from '../RightSidebar/TableOfContents.svelte';
 
 const { content, githubEditUrl, hiddenRight, hiddenTOC } = Astro.props;
 const title = content.title;
-const headers = content.astro.headers;
+const headers = content?.astro?.headers;
 ---
 
 <article id="article" class:list={["content", { 'hidden-right': hiddenRight, hiddenTOC}]}>
