--- a/docs-build/src/components/HeadSEO.astro
+++ b/docs-build/src/components/HeadSEO.astro
@@ -9,11 +9,14 @@ const { content = {}, canonicalURL } = Astro.props
 const title = content.title || content?.astro?.headers?.[0]?.text
 const formattedContentTitle =
   title && title !== SITE.title ? `${title} 🚀 ${SITE.title}` : SITE.title
+const description = content.description ? content.description : SITE.description
 const imageSrc = content?.image?.src ?? OPEN_GRAPH.image.src
 const canonicalImageSrc = imageSrc && new URL(imageSrc, Astro.site)
 const imageAlt = content?.image?.alt ?? OPEN_GRAPH.image.alt
 ---
 
+<meta name="description" content={description} />
+<meta name="keywords" content={SITE.keywords.join(",")} />
 <!-- Page Metadata -->
 <link rel="canonical" href={canonicalURL} />
 
@@ -28,21 +31,14 @@ const imageAlt = content?.image?.alt ?? OPEN_GRAPH.image.alt
     {imageAlt && <meta property="og:image:alt" content={imageAlt} />}
   </>
 )}
-<meta
-  name="description"
-  property="og:description"
-  content={content.description ? content.description : SITE.description}
-/>
+<meta property="og:description" content={description} />
 <meta property="og:site_name" content={SITE.title} />
 
 <!-- Twitter Tags -->
-<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content={OPEN_GRAPH.twitter} />
 <meta name="twitter:title" content={formattedContentTitle} />
-<meta
-  name="twitter:description"
-  content={content.description ? content.description : SITE.description}
-/>
+<meta name="twitter:description" content={description} />
 {canonicalImageSrc && (
   <>
     <meta name="twitter:image" content={canonicalImageSrc} />
