--- a/docs-build/src/styles/index.css
+++ b/docs-build/src/styles/index.css
@@ -236,7 +236,7 @@ table {
 }
 
 /* Zebra striping */
-tr:nth-of-type(odd) {
+tbody tr:nth-of-type(odd) {
   background: var(--theme-bg-hover);
 }
 th {
