--- a/docs/404.astro
+++ b/docs/404.astro
@@ -111,4 +111,7 @@ const content = { hiddenRight: true, hiddenTOC: true }
   :global(:root:not(.theme-dark)) .page-404 {
     overflow: hidden;
   }
+  :global(:root .layout) {
+    overflow: hidden;
+  }
 </style>
