--- a/docs-build/src/layouts/MainLayout.astro
+++ b/docs-build/src/layouts/MainLayout.astro
@@ -16,7 +16,7 @@ const currentFile = `src/pages${currentPage.replace(/\/$/, '')}.md`;
 const githubEditUrl = CONFIG.GITHUB_EDIT_URL && CONFIG.GITHUB_EDIT_URL + currentFile;
 ---
 
-<html dir={content.dir ?? 'ltr'} lang={content.lang ?? 'en'} class="initial">
+<html dir={content.dir ?? 'ltr'} lang={content.lang ?? 'en'} class="initial theme-dark">
 	<head>
 		<title>{content.title && content.title !== CONFIG.SITE.title ? `${content.title} 🚀 ${CONFIG.SITE.title}` : CONFIG.SITE.title}</title>
 		<HeadCommon />
