--- a/docs-build/src/components/Stars3d.astro
+++ b/docs-build/src/components/Stars3d.astro
@@ -1,5 +1,5 @@
 ---
-const animationTime = 100
+const animationTime = 100 / 2
 const vars: Record<string, string> = {
   "stars-animation-duration": `${animationTime}s`,
 }
