--- a/docs-build/src/components/PageContent/PageContent.astro
+++ b/docs-build/src/components/PageContent/PageContent.astro
@@ -1,49 +1,124 @@
 ---
-import MoreMenu from '../RightSidebar/MoreMenu.astro';
-import TableOfContents from '../RightSidebar/TableOfContents.svelte';
+import { SIDEBAR } from "../../config.ts"
+import MoreMenu from "../RightSidebar/MoreMenu.astro"
+import TableOfContents from "../RightSidebar/TableOfContents.svelte"
 
-const { content, githubEditUrl, hiddenRight, hiddenTOC } = Astro.props;
-const title = content.title;
-const headers = content?.astro?.headers;
+const { content, githubEditUrl, hiddenRight, hiddenTOC } = Astro.props
+const title = content.title
+const headers = content?.astro?.headers
+const baseUrl = import.meta.env.BASE_URL
+const currentPage = new URL(Astro.request.url).pathname
+const currentPageMatch = currentPage
+  .replace(baseUrl, "")
+  .replace(/([^/])$/gu, "$1/")
+
+const sidebarSections = SIDEBAR.en.reduce(
+  (items, item) => {
+    if (item.link != null && !item.ignorePageNav) {
+      items.push(
+        item as {
+          text: string
+          link: string
+        },
+      )
+    }
+    return items
+  },
+  [] as {
+    text: string
+    link: string
+  }[],
+)
+const sidebarIndex = sidebarSections.findIndex(
+  (menu) => menu.link === currentPageMatch,
+)
 ---
 
-<article id="article" class:list={["content", { 'hidden-right': hiddenRight, hiddenTOC}]}>
-	<section class="main-section">
-		{title !== content?.astro?.headers?.[0]?.text && <h1 class="content-title" id="overview">{title}</h1>}
-		{
-			!hiddenTOC &&
-			<nav class="block sm:hidden">
-				<TableOfContents client:media="(max-width: 50em)" {headers} />
-			</nav>
-		}
-		<slot />
-	</section>
-	<nav class="block sm:hidden">
-		<MoreMenu editHref={githubEditUrl} />
-	</nav>
+<article
+  id="article"
+  class:list={["content", { "hidden-right": hiddenRight, hiddenTOC }]}
+>
+  <section class="main-section">
+    {title !== content?.astro?.headers?.[0]?.text && (
+      <h1 class="content-title" id="overview">
+        {title}
+      </h1>
+    )}
+    {!hiddenTOC && (
+      <nav class="block sm:hidden">
+        <TableOfContents client:media="(max-width: 50em)" headers={headers} />
+      </nav>
+    )}
+    <slot></slot>
+  </section>
+  {sidebarIndex >= 0 && (
+    <div class="page-nav">
+      {sidebarIndex > 0 && (
+        <span class="prev">
+          Back
+          <br />←
+          <a
+            href={`${baseUrl}${sidebarSections[sidebarIndex - 1].link}`}
+            class="prev"
+          >
+            {sidebarSections[sidebarIndex - 1].text}
+          </a>
+        </span>
+      )}
+      {sidebarIndex + 1 < sidebarSections.length && (
+        <span class="next">
+          Next Page
+          <br />
+          <a
+            href={`${baseUrl}${sidebarSections[sidebarIndex + 1].link}`}
+            class="next"
+          >
+            {sidebarSections[sidebarIndex + 1].text}
+          </a>
+          →
+        </span>
+      )}
+    </div>
+  )}
+  <nav class="block sm:hidden">
+    <MoreMenu editHref={githubEditUrl} />
+  </nav>
 </article>
 
 <style>
-	.content {
-		padding: 0;
-		width: 100%;
-		height: 100%;
-		display: flex;
-		flex-direction: column;
-	}
-	.content:not(.hidden-right) {
-		max-width: 75ch;
-	}
-	.content > section {
-		margin-bottom: 4rem;
-	}
-	.block {
-		display: block;
-	}
+  .content {
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .content:not(.hidden-right) {
+    max-width: 75ch;
+  }
+  .content > section {
+    margin-bottom: 4rem;
+  }
+  .page-nav {
+    display: flex;
+    padding: 8px;
+    border-top: solid 1px #ddd5;
+  }
+  .page-nav .prev {
+    margin-right: auto;
+    text-align: right;
+  }
+  .page-nav .next {
+    margin-left: auto;
+    text-align: left;
+  }
+  .block {
+    display: block;
+  }
 
-	@media (min-width: 50em) {
-		.sm\:hidden {
-			display: none;
-		}
-	}
+  @media (min-width: 50em) {
+    .sm\:hidden {
+      display: none;
+    }
+  }
 </style>
