--- a/docs-build/src/components/RightSidebar/RightSidebar.astro
+++ b/docs-build/src/components/RightSidebar/RightSidebar.astro
@@ -2,12 +2,12 @@
 import TableOfContents from './TableOfContents.svelte';
 import MoreMenu from './MoreMenu.astro';
 const { content, githubEditUrl, hiddenTOC } = Astro.props;
-const headers = content?.astro?.headers;
+const headings = content?.astro?.headings;
 ---
 
 <nav class="sidebar-nav" aria-labelledby="grid-right">
 	<div class="sidebar-nav-inner">
-		{!hiddenTOC && <TableOfContents client:media="(min-width: 50em)" {headers} />}
+		{!hiddenTOC && <TableOfContents client:media="(min-width: 50em)" {headings} />}
 		<MoreMenu editHref={githubEditUrl} />
 	</div>
 </nav>
