--- a/docs-build/src/layouts/MainLayout.astro
+++ b/docs-build/src/layouts/MainLayout.astro
@@ -10,7 +10,7 @@ import * as CONFIG from '../config';
 const { content = {} } = Astro.props;
 const hiddenRight = Boolean(content.hiddenRight)
 const hiddenTOC = Boolean(content.hiddenRight)
-const deployCanonicalURL = `https://ota-meshi.github.io${import.meta.env.BASE_URL  }${new URL(Astro.canonicalURL).pathname.replace(/^\//u,'')}`
+const deployCanonicalURL = `https://ota-meshi.github.io${import.meta.env.BASE_URL}${Astro.url.pathname.replace(/^\//u,'')}`
 const currentPage = new URL(Astro.request.url).pathname;
 const currentFile = `src/pages${currentPage.replace(/\/$/, '')}.md`;
 const githubEditUrl = CONFIG.GITHUB_EDIT_URL && CONFIG.GITHUB_EDIT_URL + currentFile;
