--- a/docs-build/src/layouts/MainLayout.astro
+++ b/docs-build/src/layouts/MainLayout.astro
@@ -7,7 +7,8 @@ import LeftSidebar from '../components/LeftSidebar/LeftSidebar.astro';
 import RightSidebar from '../components/RightSidebar/RightSidebar.astro';
 import * as CONFIG from '../config';
 
-const { content = {} } = Astro.props;
+const { frontmatter = {}, headings =[] } = Astro.props;
+const content = { ...frontmatter, astro: { headings }}
 const hiddenRight = Boolean(content.hiddenRight)
 const hiddenTOC = Boolean(content.hiddenRight)
 const deployCanonicalURL = `https://ota-meshi.github.io${import.meta.env.BASE_URL}${Astro.url.pathname.replace(/^\//u,'')}`
