--- a/docs-build/src/components/RightSidebar/RightSidebar.astro
+++ b/docs-build/src/components/RightSidebar/RightSidebar.astro
@@ -1,27 +1,31 @@
 ---
-import TableOfContents from './TableOfContents.svelte';
-import MoreMenu from './MoreMenu.astro';
-const { content, githubEditUrl, hiddenTOC } = Astro.props;
-const headings = content?.astro?.headings;
+import TableOfContents from "./TableOfContents.svelte"
+import MoreMenu from "./MoreMenu.astro"
+const { content, githubEditUrl, hiddenTOC } = Astro.props
+const headings = content?.astro?.headings
 ---
 
 <nav class="sidebar-nav" aria-labelledby="grid-right">
-	<div class="sidebar-nav-inner">
-		{!hiddenTOC && <><TableOfContents client:media="(min-width: 50em)" {headings} /></>}
-		<MoreMenu editHref={githubEditUrl} />
-	</div>
+  <div class="sidebar-nav-inner">
+    {!hiddenTOC && (
+      <>
+        <TableOfContents client:media="(min-width: 50em)" {headings} />
+      </>
+    )}
+    <MoreMenu editHref={githubEditUrl} />
+  </div>
 </nav>
 
 <style>
-	.sidebar-nav {
-		width: 100%;
-		position: sticky;
-		top: 0;
-	}
-	.sidebar-nav-inner {
-		height: 100%;
-		padding: 0;
-		padding-top: var(--doc-padding);
-		overflow: auto;
-	}
+  .sidebar-nav {
+    width: 100%;
+    position: sticky;
+    top: 0;
+  }
+  .sidebar-nav-inner {
+    height: 100%;
+    padding: 0;
+    padding-top: var(--doc-padding);
+    overflow: auto;
+  }
 </style>
