--- a/docs-build/src/layouts/MainLayout.astro
+++ b/docs-build/src/layouts/MainLayout.astro
@@ -1,142 +1,152 @@
 ---
-import HeadCommon from '../components/HeadCommon.astro';
-import HeadSEO from '../components/HeadSEO.astro';
-import Header from '../components/Header/Header.astro';
-import PageContent from '../components/PageContent/PageContent.astro';
-import LeftSidebar from '../components/LeftSidebar/LeftSidebar.astro';
-import RightSidebar from '../components/RightSidebar/RightSidebar.astro';
-import * as CONFIG from '../config';
+import HeadCommon from "../components/HeadCommon.astro"
+import HeadSEO from "../components/HeadSEO.astro"
+import Header from "../components/Header/Header.astro"
+import PageContent from "../components/PageContent/PageContent.astro"
+import LeftSidebar from "../components/LeftSidebar/LeftSidebar.astro"
+import RightSidebar from "../components/RightSidebar/RightSidebar.astro"
+import * as CONFIG from "../config"
 
-const { frontmatter = {}, headings =[] } = Astro.props;
-const content = { ...frontmatter, astro: { headings }}
+const { frontmatter = {}, headings = [] } = Astro.props
+const content = { ...frontmatter, astro: { headings } }
 const hiddenRight = Boolean(content.hiddenRight)
 const hiddenTOC = Boolean(content.hiddenRight)
-const deployCanonicalURL = `https://ota-meshi.github.io${import.meta.env.BASE_URL}${Astro.url.pathname.replace(/^\//u,'')}`
-const currentPage = new URL(Astro.request.url).pathname;
-const currentFile = `src/pages${currentPage.replace(/\/$/, '')}.md`;
-const githubEditUrl = CONFIG.GITHUB_EDIT_URL && CONFIG.GITHUB_EDIT_URL + currentFile;
+const deployCanonicalURL = `https://ota-meshi.github.io${
+  import.meta.env.BASE_URL
+}${Astro.url.pathname.replace(/^\//u, "")}`
+const currentPage = new URL(Astro.request.url).pathname
+const currentFile = `src/pages${currentPage.replace(/\/$/, "")}.md`
+const githubEditUrl =
+  CONFIG.GITHUB_EDIT_URL && CONFIG.GITHUB_EDIT_URL + currentFile
 ---
 
-<html dir={content.dir ?? 'ltr'} lang={content.lang ?? 'en'} class="initial theme-dark">
-	<head>
-		<title>{content.title && content.title !== CONFIG.SITE.title ? `${content.title} 🚀 ${CONFIG.SITE.title}` : CONFIG.SITE.title}</title>
-		<HeadCommon />
-		<HeadSEO {content} canonicalURL={deployCanonicalURL} />
-		<style>
-			body {
-				width: 100%;
-				display: grid;
-				grid-template-rows: var(--theme-navbar-height) 1fr;
-				--gutter: 0.5rem;
-				--doc-padding: 2rem;
-			}
-			.layout {
-				display: grid;
-				grid-auto-flow: column;
-				grid-template-columns:
-					minmax(var(--gutter), 1fr)
-					minmax(0, var(--max-width))
-					minmax(var(--gutter), 1fr);
-				overflow-x: hidden;
-			}
-			.hidden-right.layout {
-				grid-template-columns:
-					minmax(var(--gutter), 1fr)
-					minmax(0, var(--max-width))
-			}
-			.layout :global(> *) {
-				width: 100%;
-				height: 100%;
-			}
-			.grid-sidebar {
-				height: 100vh;
-				position: sticky;
-				top: 0;
-				padding: 0;
-			}
-			#grid-left {
-				position: fixed;
-				background-color: var(--theme-bg);
-				z-index: 10;
-				display: none;
-			}
-			#grid-main {
-				padding: var(--doc-padding) var(--gutter);
-				grid-column: 2;
-				display: flex;
-				flex-direction: column;
-				height: 100%;
-			}
-			.hidden-right #grid-main {
-				padding-right: 2rem;
-			}
-			#grid-right {
-				display: none;
-			}
-			:global(.mobile-sidebar-toggle) {
-				overflow: hidden;
-			}
-			:global(.mobile-sidebar-toggle) #grid-left {
-				display: block;
-				top: 2rem;
-			}
-			@media (min-width: 50em) {
-				.layout {
-					overflow: initial;
-					grid-template-columns:
-						20rem
-						minmax(0, var(--max-width));
-					gap: 1em;
-				}
-				#grid-left {
-					display: flex;
-					padding-left: 2rem;
-					position: sticky;
-					grid-column: 1;
-				}
-			}
+<html
+  dir={content.dir ?? "ltr"}
+  lang={content.lang ?? "en"}
+  class="initial theme-dark"
+>
+  <head>
+    <title>
+      {content.title && content.title !== CONFIG.SITE.title
+        ? `${content.title} 🚀 ${CONFIG.SITE.title}`
+        : CONFIG.SITE.title}
+    </title>
+    <HeadCommon />
+    <HeadSEO {content} canonicalURL={deployCanonicalURL} />
+    <style>
+      body {
+        width: 100%;
+        display: grid;
+        grid-template-rows: var(--theme-navbar-height) 1fr;
+        --gutter: 0.5rem;
+        --doc-padding: 2rem;
+      }
+      .layout {
+        display: grid;
+        grid-auto-flow: column;
+        grid-template-columns:
+          minmax(var(--gutter), 1fr)
+          minmax(0, var(--max-width))
+          minmax(var(--gutter), 1fr);
+        overflow-x: hidden;
+      }
+      .hidden-right.layout {
+        grid-template-columns:
+          minmax(var(--gutter), 1fr)
+          minmax(0, var(--max-width));
+      }
+      .layout :global(> *) {
+        width: 100%;
+        height: 100%;
+      }
+      .grid-sidebar {
+        height: 100vh;
+        position: sticky;
+        top: 0;
+        padding: 0;
+      }
+      #grid-left {
+        position: fixed;
+        background-color: var(--theme-bg);
+        z-index: 10;
+        display: none;
+      }
+      #grid-main {
+        padding: var(--doc-padding) var(--gutter);
+        grid-column: 2;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+      }
+      .hidden-right #grid-main {
+        padding-right: 2rem;
+      }
+      #grid-right {
+        display: none;
+      }
+      :global(.mobile-sidebar-toggle) {
+        overflow: hidden;
+      }
+      :global(.mobile-sidebar-toggle) #grid-left {
+        display: block;
+        top: 2rem;
+      }
+      @media (min-width: 50em) {
+        .layout {
+          overflow: initial;
+          grid-template-columns:
+            20rem
+            minmax(0, var(--max-width));
+          gap: 1em;
+        }
+        #grid-left {
+          display: flex;
+          padding-left: 2rem;
+          position: sticky;
+          grid-column: 1;
+        }
+      }
 
-			@media (min-width: 72em) {
-				.layout {
-					grid-template-columns:
-						20rem
-						minmax(0, var(--max-width))
-						18rem;
-					padding-left: 0;
-					padding-right: 0;
-					margin: 0 auto;
-				}
-				.hidden-right.layout {
-					grid-template-columns:
-						20rem
-						minmax(0, var(--max-width));
-					margin: 0;
-				}
-				#grid-right {
-					grid-column: 3;
-					display: flex;
-				}
-			}
-		</style>
-	</head>
+      @media (min-width: 72em) {
+        .layout {
+          grid-template-columns:
+            20rem
+            minmax(0, var(--max-width))
+            18rem;
+          padding-left: 0;
+          padding-right: 0;
+          margin: 0 auto;
+        }
+        .hidden-right.layout {
+          grid-template-columns:
+            20rem
+            minmax(0, var(--max-width));
+          margin: 0;
+        }
+        #grid-right {
+          grid-column: 3;
+          display: flex;
+        }
+      }
+    </style>
+  </head>
 
-	<body>
-		<Header {currentPage} />
-		<main class:list={["layout", { 'hidden-right': hiddenRight}]}>
-			<aside id="grid-left" class="grid-sidebar" title="Site Navigation">
-				<LeftSidebar {currentPage} />
-			</aside>
-			<div id="grid-main">
-				<PageContent {content} {githubEditUrl} {hiddenRight} {hiddenTOC}>
-					<slot />
-				</PageContent>
-			</div>
-			{
-				!hiddenRight &&
-				<aside id="grid-right" class="grid-sidebar" title="Table of Contents">
-					<RightSidebar {content} {githubEditUrl} {hiddenTOC}/>
-				</aside>
-			}
-		</main>
-	</body>
+  <body>
+    <Header {currentPage} />
+    <main class:list={["layout", { "hidden-right": hiddenRight }]}>
+      <aside id="grid-left" class="grid-sidebar" title="Site Navigation">
+        <LeftSidebar {currentPage} />
+      </aside>
+      <div id="grid-main">
+        <PageContent {content} {githubEditUrl} {hiddenRight} {hiddenTOC}>
+          <slot />
+        </PageContent>
+      </div>
+      {!hiddenRight && (
+        <aside id="grid-right" class="grid-sidebar" title="Table of Contents">
+          <RightSidebar {content} {githubEditUrl} {hiddenTOC} />
+        </aside>
+      )}
+    </main>
+  </body>
 </html>
