--- a/docs/404.astro
+++ b/docs/404.astro
@@ -3,10 +3,10 @@ import MainLayout from "./../layouts/MainLayout.astro"
 import Stars2d from "./../components/Stars2d.astro"
 import Stars3d from "./../components/Stars3d.astro"
 const baseUrl = import.meta.env.BASE_URL
-const content = { hiddenRight: true, hiddenTOC: true }
+const frontmatter = { hiddenRight: true, hiddenTOC: true }
 ---
 
-<MainLayout {content}>
+<MainLayout {frontmatter}>
   <div class="page-404">
     <h1>404</h1>
     <div class="content">
