--- a/docs-build/src/components/Header/Header.astro
+++ b/docs-build/src/components/Header/Header.astro
@@ -4,8 +4,7 @@ import AstroLogo from "./AstroLogo.astro"
 import SkipToContent from "./SkipToContent.astro"
 import SidebarToggle from "./SidebarToggle.svelte"
 
-const baseUrl =
-  process.env.NODE_ENV === "development" ? "/" : import.meta.env.BASE_URL
+const baseUrl = import.meta.env.BASE_URL
 ---
 
 <header>
