--- a/docs-build/src/components/Footer/AvatarList.astro
+++ b/docs-build/src/components/Footer/AvatarList.astro
@@ -154,13 +154,17 @@ const additionalContributors = unique.length - recentContributors.length // list
     height: 100%;
     object-fit: cover;
     background-color: #fff;
-    box-shadow: 0 0 0 0.05em #fff, 0 0 0 0.08em rgba(0, 0, 0, 0.15);
+    box-shadow:
+      0 0 0 0.05em #fff,
+      0 0 0 0.08em rgba(0, 0, 0, 0.15);
   }
 
   .avatar-list a:focus {
     outline: 2px solid transparent;
     /* Double-layer trick to work for dark and light backgrounds */
-    box-shadow: 0 0 0 0.08em var(--theme-accent), 0 0 0 0.12em white;
+    box-shadow:
+      0 0 0 0.08em var(--theme-accent),
+      0 0 0 0.12em white;
   }
 
   .contributors {
