--- a/docs-build/src/components/Header/Header.astro
+++ b/docs-build/src/components/Header/Header.astro
@@ -32,6 +32,7 @@ const baseUrl = `${import.meta.env.BASE_URL.replace(/\/$/, "")}/`
         target="_blank"
         class="github-link"
         rel="noopener noreferrer"
+        aria-label="GitHub"
       >
         <svg
           version="1.1"
