fix: add new check for the rule and more tests

--- a/tests/fixtures/rules/missing-client-directive-value/valid/client-only-value.astro
+++ b/tests/fixtures/rules/missing-client-directive-value/valid/client-only-value.astro
@@ -5,4 +5,5 @@ let string = "svelte"
 
 <!-- prettier-ignore-start -->
 <SomeSvelteComponent client:only={string} />
+<SomeSvelteComponent client:idle />
 <!-- prettier-ignore-end -->
