--- a/tests/fixtures/rules/missing-client-only-directive-value/valid/client-only-value-input.astro
+++ b/tests/fixtures/rules/missing-client-only-directive-value/valid/client-only-value-input.astro
@@ -3,7 +3,6 @@ import SomeSvelteComponent from "../SomeSvelteComponent.svelte"
 let string = "svelte"
 ---
 
-<!-- prettier-ignore-start -->
+<SomeSvelteComponent client:only="svelte" />
 <SomeSvelteComponent client:only={string} />
 <SomeSvelteComponent client:idle />
-<!-- prettier-ignore-end -->
